// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width,initial-scale=1"
    >
    <script defer="defer"
            src="main.js"
    >
    </script>
    <link href="main.css"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -17,5 +17,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._16symg1z,html._16symg1z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="qb2t4f0 _12o2juh18 _12o2juh1b">
+        <div class="uu5tf40 _16symg176 _16symg166 _16symg196 _16symg186 _16symg15a _12o2juh18 _12o2juh1b _16symg132 _16symg135">
+          <span class="uu5tf40 _16symg14u _12o2juh0 _12o2juh1 _12o2juh21 _1d0g9qk4 _12o2juhd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .uu5tf40 {
  -webkit-tap-highlight-color: transparent;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
}
[data-braid-hidefocusrings] .uu5tf40 {
  outline: none;
}
.uu5tf41 {
  display: block;
}
.uu5tf42 {
  line-height: 1;
}
.uu5tf43 {
  list-style: none;
}
.uu5tf44 {
  quotes: none;
}
.uu5tf44:after,
.uu5tf44:before {
  content: "";
}
.uu5tf45 {
  border-collapse: collapse;
  border-spacing: 0;
}
.uu5tf46 {
  -webkit-appearance: none;
  appearance: none;
}
.uu5tf47 {
  background-color: transparent;
}
.uu5tf49 {
  color: inherit;
}
.uu5tf4a:disabled {
  opacity: 1;
}
.uu5tf4a::-ms-expand {
  display: none;
}
.uu5tf4c[type="number"] {
  -moz-appearance: textfield;
}
.uu5tf4c[type="number"]::-webkit-inner-spin-button,
.uu5tf4c[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.uu5tf4c::-ms-clear {
  display: none;
}
.uu5tf4c::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.uu5tf4f {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
._16symg10 {
  overflow: hidden;
}
._16symg11 {
  overflow: scroll;
}
._16symg12 {
  overflow: visible;
}
._16symg13 {
  overflow: auto;
}
._16symg14 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
._16symg15 {
  outline: none;
}
._16symg16 {
  opacity: 0;
}
._16symg17 {
  z-index: 0;
}
._16symg18 {
  z-index: 1;
}
._16symg19 {
  z-index: 2;
}
._16symg1a {
  z-index: 90;
}
._16symg1b {
  z-index: 100;
}
._16symg1c {
  z-index: 200;
}
._16symg1d {
  z-index: 290;
}
._16symg1e {
  z-index: 300;
}
._16symg1f {
  z-index: 400;
}
._16symg1g {
  cursor: default;
}
._16symg1h {
  cursor: pointer;
}
._16symg1i {
  pointer-events: none;
}
._16symg1j {
  top: 0;
}
._16symg1k {
  bottom: 0;
}
._16symg1l {
  left: 0;
}
._16symg1m {
  right: 0;
}
._16symg1n {
  height: 100%;
}
._16symg1o {
  height: var(--_1giodv88);
}
._16symg1p {
  width: 100%;
}
._16symg1q {
  width: var(--_1giodv88);
}
._16symg1r {
  min-width: 0;
}
._16symg1s {
  max-width: var(--_1giodv8z);
}
._16symg1t {
  max-width: var(--_1giodv810);
}
._16symg1u {
  max-width: var(--_1giodv811);
}
._16symg1v {
  max-width: var(--_1giodv812);
}
._16symg1w {
  transition: var(--_1giodv85f);
}
._16symg1x {
  transition: var(--_1giodv85g);
}
._16symg1y:active {
  transform: var(--_1giodv85h);
}
html._16symg1z ._16symg111,
html:not(._16symg1z) ._16symg110 {
  background: var(--_1giodv81r);
}
html._16symg1z ._16symg113,
html:not(._16symg1z) ._16symg112 {
  background: var(--_1giodv81s);
}
html._16symg1z ._16symg115,
html:not(._16symg1z) ._16symg114 {
  background: var(--_1giodv81t);
}
html._16symg1z ._16symg117,
html:not(._16symg1z) ._16symg116 {
  background: var(--_1giodv81u);
}
html._16symg1z ._16symg119,
html:not(._16symg1z) ._16symg118 {
  background: var(--_1giodv81v);
}
html._16symg1z ._16symg11b,
html:not(._16symg1z) ._16symg11a {
  background: var(--_1giodv81w);
}
html._16symg1z ._16symg11d,
html:not(._16symg1z) ._16symg11c {
  background: var(--_1giodv81x);
}
html._16symg1z ._16symg11f,
html:not(._16symg1z) ._16symg11e {
  background: var(--_1giodv81y);
}
html._16symg1z ._16symg11h,
html:not(._16symg1z) ._16symg11g {
  background: var(--_1giodv81z);
}
html._16symg1z ._16symg11j,
html:not(._16symg1z) ._16symg11i {
  background: var(--_1giodv820);
}
html._16symg1z ._16symg11l,
html:not(._16symg1z) ._16symg11k {
  background: var(--_1giodv821);
}
html._16symg1z ._16symg11n,
html:not(._16symg1z) ._16symg11m {
  background: var(--_1giodv822);
}
html._16symg1z ._16symg11p,
html:not(._16symg1z) ._16symg11o {
  background: var(--_1giodv823);
}
html._16symg1z ._16symg11r,
html:not(._16symg1z) ._16symg11q {
  background: var(--_1giodv824);
}
html._16symg1z ._16symg11t,
html:not(._16symg1z) ._16symg11s {
  background: var(--_1giodv825);
}
html._16symg1z ._16symg11v,
html:not(._16symg1z) ._16symg11u {
  background: var(--_1giodv826);
}
html._16symg1z ._16symg11x,
html:not(._16symg1z) ._16symg11w {
  background: var(--_1giodv827);
}
html._16symg1z ._16symg11z,
html:not(._16symg1z) ._16symg11y {
  background: var(--_1giodv828);
}
html._16symg1z ._16symg121,
html:not(._16symg1z) ._16symg120 {
  background: var(--_1giodv829);
}
html._16symg1z ._16symg123,
html:not(._16symg1z) ._16symg122 {
  background: var(--_1giodv82a);
}
html._16symg1z ._16symg125,
html:not(._16symg1z) ._16symg124 {
  background: var(--_1giodv82b);
}
html._16symg1z ._16symg127,
html:not(._16symg1z) ._16symg126 {
  background: var(--_1giodv82c);
}
html._16symg1z ._16symg129,
html:not(._16symg1z) ._16symg128 {
  background: var(--_1giodv82d);
}
html._16symg1z ._16symg12b,
html:not(._16symg1z) ._16symg12a {
  background: var(--_1giodv82e);
}
html._16symg1z ._16symg12d,
html:not(._16symg1z) ._16symg12c {
  background: var(--_1giodv82f);
}
html._16symg1z ._16symg12f,
html:not(._16symg1z) ._16symg12e {
  background: var(--_1giodv82g);
}
html._16symg1z ._16symg12h,
html:not(._16symg1z) ._16symg12g {
  background: var(--_1giodv82h);
}
html._16symg1z ._16symg12j,
html:not(._16symg1z) ._16symg12i {
  background: var(--_1giodv82i);
}
html._16symg1z ._16symg12l,
html:not(._16symg1z) ._16symg12k {
  background: var(--_1giodv82j);
}
html._16symg1z ._16symg12n,
html:not(._16symg1z) ._16symg12m {
  background: var(--_1giodv82k);
}
html._16symg1z ._16symg12p,
html:not(._16symg1z) ._16symg12o {
  background: var(--_1giodv82l);
}
html._16symg1z ._16symg12r,
html:not(._16symg1z) ._16symg12q {
  background: var(--_1giodv82m);
}
html._16symg1z ._16symg12t,
html:not(._16symg1z) ._16symg12s {
  background: var(--_1giodv82n);
}
html._16symg1z ._16symg12v,
html:not(._16symg1z) ._16symg12u {
  background: var(--_1giodv82o);
}
html._16symg1z ._16symg12x,
html:not(._16symg1z) ._16symg12w {
  background: var(--_1giodv82p);
}
html._16symg1z ._16symg12z,
html:not(._16symg1z) ._16symg12y {
  background: var(--_1giodv82q);
}
html._16symg1z ._16symg131,
html:not(._16symg1z) ._16symg130 {
  background: var(--_1giodv82r);
}
html._16symg1z ._16symg133,
html:not(._16symg1z) ._16symg132 {
  background: var(--_1giodv82s);
}
html._16symg1z ._16symg135,
html:not(._16symg1z) ._16symg134 {
  background: var(--_1giodv82t);
}
html._16symg1z ._16symg137,
html:not(._16symg1z) ._16symg136 {
  box-shadow: var(--_1giodv85i);
}
html._16symg1z ._16symg139,
html:not(._16symg1z) ._16symg138 {
  box-shadow: var(--_1giodv85j);
}
html._16symg1z ._16symg13b,
html:not(._16symg1z) ._16symg13a {
  box-shadow: var(--_1giodv85k);
}
html._16symg1z ._16symg13d,
html:not(._16symg1z) ._16symg13c {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8d);
}
html._16symg1z ._16symg13f,
html:not(._16symg1z) ._16symg13e {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8e);
}
html._16symg1z ._16symg13h,
html:not(._16symg1z) ._16symg13g {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8f);
}
html._16symg1z ._16symg13j,
html:not(._16symg1z) ._16symg13i {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8g);
}
html._16symg1z ._16symg13l,
html:not(._16symg1z) ._16symg13k {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8h);
}
html._16symg1z ._16symg13n,
html:not(._16symg1z) ._16symg13m {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8h);
}
html._16symg1z ._16symg13p,
html:not(._16symg1z) ._16symg13o {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8i);
}
html._16symg1z ._16symg13r,
html:not(._16symg1z) ._16symg13q {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8i);
}
html._16symg1z ._16symg13t,
html:not(._16symg1z) ._16symg13s {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8j);
}
html._16symg1z ._16symg13v,
html:not(._16symg1z) ._16symg13u {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8l);
}
html._16symg1z ._16symg13x,
html:not(._16symg1z) ._16symg13w {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8l);
}
html._16symg1z ._16symg13z,
html:not(._16symg1z) ._16symg13y {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8m);
}
html._16symg1z ._16symg141,
html:not(._16symg1z) ._16symg140 {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8m);
}
html._16symg1z ._16symg143,
html:not(._16symg1z) ._16symg142 {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8n);
}
html._16symg1z ._16symg145,
html:not(._16symg1z) ._16symg144 {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8o);
}
html._16symg1z ._16symg147,
html:not(._16symg1z) ._16symg146 {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8p);
}
html._16symg1z ._16symg149,
html:not(._16symg1z) ._16symg148 {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8p);
}
html._16symg1z ._16symg14b,
html:not(._16symg1z) ._16symg14a {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8q);
}
html._16symg1z ._16symg14d,
html:not(._16symg1z) ._16symg14c {
  box-shadow: inset 0 0 0 var(--_1giodv8x) var(--_1giodv8q);
}
html._16symg1z ._16symg14f,
html:not(._16symg1z) ._16symg14e {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8r);
}
html._16symg1z ._16symg14h,
html:not(._16symg1z) ._16symg14g {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8s);
}
html._16symg1z ._16symg14j,
html:not(._16symg1z) ._16symg14i {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8t);
}
html._16symg1z ._16symg14l,
html:not(._16symg1z) ._16symg14k {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8u);
}
html._16symg1z ._16symg14n,
html:not(._16symg1z) ._16symg14m {
  box-shadow: inset 0 0 0 var(--_1giodv8w) var(--_1giodv8v);
}
html._16symg1z ._16symg14p,
html:not(._16symg1z) ._16symg14o {
  box-shadow: 0 0 0 var(--_1giodv8y) var(--_1giodv8k);
}
._16symg14q {
  display: none;
}
._16symg14u {
  display: block;
}
._16symg14y {
  display: inline;
}
._16symg152 {
  display: inline-block;
}
._16symg156 {
  display: flex;
}
._16symg15a {
  position: relative;
}
._16symg15e {
  position: absolute;
}
._16symg15i {
  position: fixed;
}
._16symg15m {
  border-radius: 0;
}
._16symg15q {
  border-radius: 9999px;
}
._16symg15u {
  border-radius: var(--_1giodv8a);
}
._16symg15y {
  border-radius: var(--_1giodv8b);
}
._16symg162 {
  border-radius: var(--_1giodv8c);
}
._16symg166 {
  padding-top: var(--_1giodv80);
}
._16symg16a {
  padding-top: var(--_1giodv81);
}
._16symg16e {
  padding-top: var(--_1giodv82);
}
._16symg16i {
  padding-top: var(--_1giodv83);
}
._16symg16m {
  padding-top: var(--_1giodv84);
}
._16symg16q {
  padding-top: var(--_1giodv85);
}
._16symg16u {
  padding-top: var(--_1giodv86);
}
._16symg16y {
  padding-top: var(--_1giodv87);
}
._16symg172 {
  padding-top: 0;
}
._16symg176 {
  padding-bottom: var(--_1giodv80);
}
._16symg17a {
  padding-bottom: var(--_1giodv81);
}
._16symg17e {
  padding-bottom: var(--_1giodv82);
}
._16symg17i {
  padding-bottom: var(--_1giodv83);
}
._16symg17m {
  padding-bottom: var(--_1giodv84);
}
._16symg17q {
  padding-bottom: var(--_1giodv85);
}
._16symg17u {
  padding-bottom: var(--_1giodv86);
}
._16symg17y {
  padding-bottom: var(--_1giodv87);
}
._16symg182 {
  padding-bottom: 0;
}
._16symg186 {
  padding-right: var(--_1giodv80);
}
._16symg18a {
  padding-right: var(--_1giodv81);
}
._16symg18e {
  padding-right: var(--_1giodv82);
}
._16symg18i {
  padding-right: var(--_1giodv83);
}
._16symg18m {
  padding-right: var(--_1giodv84);
}
._16symg18q {
  padding-right: var(--_1giodv85);
}
._16symg18u {
  padding-right: var(--_1giodv86);
}
._16symg18y {
  padding-right: var(--_1giodv87);
}
._16symg192 {
  padding-right: 0;
}
._16symg196 {
  padding-left: var(--_1giodv80);
}
._16symg19a {
  padding-left: var(--_1giodv81);
}
._16symg19e {
  padding-left: var(--_1giodv82);
}
._16symg19i {
  padding-left: var(--_1giodv83);
}
._16symg19m {
  padding-left: var(--_1giodv84);
}
._16symg19q {
  padding-left: var(--_1giodv85);
}
._16symg19u {
  padding-left: var(--_1giodv86);
}
._16symg19y {
  padding-left: var(--_1giodv87);
}
._16symg1a2 {
  padding-left: 0;
}
._16symg1a6 {
  margin-top: var(--_1giodv80);
}
._16symg1aa {
  margin-top: var(--_1giodv81);
}
._16symg1ae {
  margin-top: var(--_1giodv82);
}
._16symg1ai {
  margin-top: var(--_1giodv83);
}
._16symg1am {
  margin-top: var(--_1giodv84);
}
._16symg1aq {
  margin-top: var(--_1giodv85);
}
._16symg1au {
  margin-top: var(--_1giodv86);
}
._16symg1ay {
  margin-top: var(--_1giodv87);
}
._16symg1b2 {
  margin-top: 0;
}
._16symg1b6 {
  margin-bottom: var(--_1giodv80);
}
._16symg1ba {
  margin-bottom: var(--_1giodv81);
}
._16symg1be {
  margin-bottom: var(--_1giodv82);
}
._16symg1bi {
  margin-bottom: var(--_1giodv83);
}
._16symg1bm {
  margin-bottom: var(--_1giodv84);
}
._16symg1bq {
  margin-bottom: var(--_1giodv85);
}
._16symg1bu {
  margin-bottom: var(--_1giodv86);
}
._16symg1by {
  margin-bottom: var(--_1giodv87);
}
._16symg1c2 {
  margin-bottom: 0;
}
._16symg1c6 {
  margin-right: var(--_1giodv80);
}
._16symg1ca {
  margin-right: var(--_1giodv81);
}
._16symg1ce {
  margin-right: var(--_1giodv82);
}
._16symg1ci {
  margin-right: var(--_1giodv83);
}
._16symg1cm {
  margin-right: var(--_1giodv84);
}
._16symg1cq {
  margin-right: var(--_1giodv85);
}
._16symg1cu {
  margin-right: var(--_1giodv86);
}
._16symg1cy {
  margin-right: var(--_1giodv87);
}
._16symg1d2 {
  margin-right: 0;
}
._16symg1d6 {
  margin-left: var(--_1giodv80);
}
._16symg1da {
  margin-left: var(--_1giodv81);
}
._16symg1de {
  margin-left: var(--_1giodv82);
}
._16symg1di {
  margin-left: var(--_1giodv83);
}
._16symg1dm {
  margin-left: var(--_1giodv84);
}
._16symg1dq {
  margin-left: var(--_1giodv85);
}
._16symg1du {
  margin-left: var(--_1giodv86);
}
._16symg1dy {
  margin-left: var(--_1giodv87);
}
._16symg1e2 {
  margin-left: 0;
}
._16symg1e6 {
  align-items: flex-start;
}
._16symg1ea {
  align-items: center;
}
._16symg1ee {
  align-items: flex-end;
}
._16symg1ei {
  justify-content: flex-start;
}
._16symg1em {
  justify-content: center;
}
._16symg1eq {
  justify-content: flex-end;
}
._16symg1eu {
  justify-content: space-between;
}
._16symg1ey {
  flex-direction: row;
}
._16symg1f2 {
  flex-direction: row-reverse;
}
._16symg1f6 {
  flex-direction: column;
}
._16symg1fa {
  flex-direction: column-reverse;
}
._16symg1fe {
  flex-wrap: wrap;
}
._16symg1fi {
  flex-wrap: nowrap;
}
._16symg1fm {
  flex-shrink: 0;
}
._16symg1fq {
  flex-grow: 0;
}
._16symg1fu {
  flex-grow: 1;
}
._16symg1fy {
  text-align: left;
}
._16symg1g2 {
  text-align: center;
}
._16symg1g6 {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._16symg14r {
    display: none;
  }
  ._16symg14v {
    display: block;
  }
  ._16symg14z {
    display: inline;
  }
  ._16symg153 {
    display: inline-block;
  }
  ._16symg157 {
    display: flex;
  }
  ._16symg15b {
    position: relative;
  }
  ._16symg15f {
    position: absolute;
  }
  ._16symg15j {
    position: fixed;
  }
  ._16symg15n {
    border-radius: 0;
  }
  ._16symg15r {
    border-radius: 9999px;
  }
  ._16symg15v {
    border-radius: var(--_1giodv8a);
  }
  ._16symg15z {
    border-radius: var(--_1giodv8b);
  }
  ._16symg163 {
    border-radius: var(--_1giodv8c);
  }
  ._16symg167 {
    padding-top: var(--_1giodv80);
  }
  ._16symg16b {
    padding-top: var(--_1giodv81);
  }
  ._16symg16f {
    padding-top: var(--_1giodv82);
  }
  ._16symg16j {
    padding-top: var(--_1giodv83);
  }
  ._16symg16n {
    padding-top: var(--_1giodv84);
  }
  ._16symg16r {
    padding-top: var(--_1giodv85);
  }
  ._16symg16v {
    padding-top: var(--_1giodv86);
  }
  ._16symg16z {
    padding-top: var(--_1giodv87);
  }
  ._16symg173 {
    padding-top: 0;
  }
  ._16symg177 {
    padding-bottom: var(--_1giodv80);
  }
  ._16symg17b {
    padding-bottom: var(--_1giodv81);
  }
  ._16symg17f {
    padding-bottom: var(--_1giodv82);
  }
  ._16symg17j {
    padding-bottom: var(--_1giodv83);
  }
  ._16symg17n {
    padding-bottom: var(--_1giodv84);
  }
  ._16symg17r {
    padding-bottom: var(--_1giodv85);
  }
  ._16symg17v {
    padding-bottom: var(--_1giodv86);
  }
  ._16symg17z {
    padding-bottom: var(--_1giodv87);
  }
  ._16symg183 {
    padding-bottom: 0;
  }
  ._16symg187 {
    padding-right: var(--_1giodv80);
  }
  ._16symg18b {
    padding-right: var(--_1giodv81);
  }
  ._16symg18f {
    padding-right: var(--_1giodv82);
  }
  ._16symg18j {
    padding-right: var(--_1giodv83);
  }
  ._16symg18n {
    padding-right: var(--_1giodv84);
  }
  ._16symg18r {
    padding-right: var(--_1giodv85);
  }
  ._16symg18v {
    padding-right: var(--_1giodv86);
  }
  ._16symg18z {
    padding-right: var(--_1giodv87);
  }
  ._16symg193 {
    padding-right: 0;
  }
  ._16symg197 {
    padding-left: var(--_1giodv80);
  }
  ._16symg19b {
    padding-left: var(--_1giodv81);
  }
  ._16symg19f {
    padding-left: var(--_1giodv82);
  }
  ._16symg19j {
    padding-left: var(--_1giodv83);
  }
  ._16symg19n {
    padding-left: var(--_1giodv84);
  }
  ._16symg19r {
    padding-left: var(--_1giodv85);
  }
  ._16symg19v {
    padding-left: var(--_1giodv86);
  }
  ._16symg19z {
    padding-left: var(--_1giodv87);
  }
  ._16symg1a3 {
    padding-left: 0;
  }
  ._16symg1a7 {
    margin-top: var(--_1giodv80);
  }
  ._16symg1ab {
    margin-top: var(--_1giodv81);
  }
  ._16symg1af {
    margin-top: var(--_1giodv82);
  }
  ._16symg1aj {
    margin-top: var(--_1giodv83);
  }
  ._16symg1an {
    margin-top: var(--_1giodv84);
  }
  ._16symg1ar {
    margin-top: var(--_1giodv85);
  }
  ._16symg1av {
    margin-top: var(--_1giodv86);
  }
  ._16symg1az {
    margin-top: var(--_1giodv87);
  }
  ._16symg1b3 {
    margin-top: 0;
  }
  ._16symg1b7 {
    margin-bottom: var(--_1giodv80);
  }
  ._16symg1bb {
    margin-bottom: var(--_1giodv81);
  }
  ._16symg1bf {
    margin-bottom: var(--_1giodv82);
  }
  ._16symg1bj {
    margin-bottom: var(--_1giodv83);
  }
  ._16symg1bn {
    margin-bottom: var(--_1giodv84);
  }
  ._16symg1br {
    margin-bottom: var(--_1giodv85);
  }
  ._16symg1bv {
    margin-bottom: var(--_1giodv86);
  }
  ._16symg1bz {
    margin-bottom: var(--_1giodv87);
  }
  ._16symg1c3 {
    margin-bottom: 0;
  }
  ._16symg1c7 {
    margin-right: var(--_1giodv80);
  }
  ._16symg1cb {
    margin-right: var(--_1giodv81);
  }
  ._16symg1cf {
    margin-right: var(--_1giodv82);
  }
  ._16symg1cj {
    margin-right: var(--_1giodv83);
  }
  ._16symg1cn {
    margin-right: var(--_1giodv84);
  }
  ._16symg1cr {
    margin-right: var(--_1giodv85);
  }
  ._16symg1cv {
    margin-right: var(--_1giodv86);
  }
  ._16symg1cz {
    margin-right: var(--_1giodv87);
  }
  ._16symg1d3 {
    margin-right: 0;
  }
  ._16symg1d7 {
    margin-left: var(--_1giodv80);
  }
  ._16symg1db {
    margin-left: var(--_1giodv81);
  }
  ._16symg1df {
    margin-left: var(--_1giodv82);
  }
  ._16symg1dj {
    margin-left: var(--_1giodv83);
  }
  ._16symg1dn {
    margin-left: var(--_1giodv84);
  }
  ._16symg1dr {
    margin-left: var(--_1giodv85);
  }
  ._16symg1dv {
    margin-left: var(--_1giodv86);
  }
  ._16symg1dz {
    margin-left: var(--_1giodv87);
  }
  ._16symg1e3 {
    margin-left: 0;
  }
  ._16symg1e7 {
    align-items: flex-start;
  }
  ._16symg1eb {
    align-items: center;
  }
  ._16symg1ef {
    align-items: flex-end;
  }
  ._16symg1ej {
    justify-content: flex-start;
  }
  ._16symg1en {
    justify-content: center;
  }
  ._16symg1er {
    justify-content: flex-end;
  }
  ._16symg1ev {
    justify-content: space-between;
  }
  ._16symg1ez {
    flex-direction: row;
  }
  ._16symg1f3 {
    flex-direction: row-reverse;
  }
  ._16symg1f7 {
    flex-direction: column;
  }
  ._16symg1fb {
    flex-direction: column-reverse;
  }
  ._16symg1ff {
    flex-wrap: wrap;
  }
  ._16symg1fj {
    flex-wrap: nowrap;
  }
  ._16symg1fn {
    flex-shrink: 0;
  }
  ._16symg1fr {
    flex-grow: 0;
  }
  ._16symg1fv {
    flex-grow: 1;
  }
  ._16symg1fz {
    text-align: left;
  }
  ._16symg1g3 {
    text-align: center;
  }
  ._16symg1g7 {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._16symg14s {
    display: none;
  }
  ._16symg14w {
    display: block;
  }
  ._16symg150 {
    display: inline;
  }
  ._16symg154 {
    display: inline-block;
  }
  ._16symg158 {
    display: flex;
  }
  ._16symg15c {
    position: relative;
  }
  ._16symg15g {
    position: absolute;
  }
  ._16symg15k {
    position: fixed;
  }
  ._16symg15o {
    border-radius: 0;
  }
  ._16symg15s {
    border-radius: 9999px;
  }
  ._16symg15w {
    border-radius: var(--_1giodv8a);
  }
  ._16symg160 {
    border-radius: var(--_1giodv8b);
  }
  ._16symg164 {
    border-radius: var(--_1giodv8c);
  }
  ._16symg168 {
    padding-top: var(--_1giodv80);
  }
  ._16symg16c {
    padding-top: var(--_1giodv81);
  }
  ._16symg16g {
    padding-top: var(--_1giodv82);
  }
  ._16symg16k {
    padding-top: var(--_1giodv83);
  }
  ._16symg16o {
    padding-top: var(--_1giodv84);
  }
  ._16symg16s {
    padding-top: var(--_1giodv85);
  }
  ._16symg16w {
    padding-top: var(--_1giodv86);
  }
  ._16symg170 {
    padding-top: var(--_1giodv87);
  }
  ._16symg174 {
    padding-top: 0;
  }
  ._16symg178 {
    padding-bottom: var(--_1giodv80);
  }
  ._16symg17c {
    padding-bottom: var(--_1giodv81);
  }
  ._16symg17g {
    padding-bottom: var(--_1giodv82);
  }
  ._16symg17k {
    padding-bottom: var(--_1giodv83);
  }
  ._16symg17o {
    padding-bottom: var(--_1giodv84);
  }
  ._16symg17s {
    padding-bottom: var(--_1giodv85);
  }
  ._16symg17w {
    padding-bottom: var(--_1giodv86);
  }
  ._16symg180 {
    padding-bottom: var(--_1giodv87);
  }
  ._16symg184 {
    padding-bottom: 0;
  }
  ._16symg188 {
    padding-right: var(--_1giodv80);
  }
  ._16symg18c {
    padding-right: var(--_1giodv81);
  }
  ._16symg18g {
    padding-right: var(--_1giodv82);
  }
  ._16symg18k {
    padding-right: var(--_1giodv83);
  }
  ._16symg18o {
    padding-right: var(--_1giodv84);
  }
  ._16symg18s {
    padding-right: var(--_1giodv85);
  }
  ._16symg18w {
    padding-right: var(--_1giodv86);
  }
  ._16symg190 {
    padding-right: var(--_1giodv87);
  }
  ._16symg194 {
    padding-right: 0;
  }
  ._16symg198 {
    padding-left: var(--_1giodv80);
  }
  ._16symg19c {
    padding-left: var(--_1giodv81);
  }
  ._16symg19g {
    padding-left: var(--_1giodv82);
  }
  ._16symg19k {
    padding-left: var(--_1giodv83);
  }
  ._16symg19o {
    padding-left: var(--_1giodv84);
  }
  ._16symg19s {
    padding-left: var(--_1giodv85);
  }
  ._16symg19w {
    padding-left: var(--_1giodv86);
  }
  ._16symg1a0 {
    padding-left: var(--_1giodv87);
  }
  ._16symg1a4 {
    padding-left: 0;
  }
  ._16symg1a8 {
    margin-top: var(--_1giodv80);
  }
  ._16symg1ac {
    margin-top: var(--_1giodv81);
  }
  ._16symg1ag {
    margin-top: var(--_1giodv82);
  }
  ._16symg1ak {
    margin-top: var(--_1giodv83);
  }
  ._16symg1ao {
    margin-top: var(--_1giodv84);
  }
  ._16symg1as {
    margin-top: var(--_1giodv85);
  }
  ._16symg1aw {
    margin-top: var(--_1giodv86);
  }
  ._16symg1b0 {
    margin-top: var(--_1giodv87);
  }
  ._16symg1b4 {
    margin-top: 0;
  }
  ._16symg1b8 {
    margin-bottom: var(--_1giodv80);
  }
  ._16symg1bc {
    margin-bottom: var(--_1giodv81);
  }
  ._16symg1bg {
    margin-bottom: var(--_1giodv82);
  }
  ._16symg1bk {
    margin-bottom: var(--_1giodv83);
  }
  ._16symg1bo {
    margin-bottom: var(--_1giodv84);
  }
  ._16symg1bs {
    margin-bottom: var(--_1giodv85);
  }
  ._16symg1bw {
    margin-bottom: var(--_1giodv86);
  }
  ._16symg1c0 {
    margin-bottom: var(--_1giodv87);
  }
  ._16symg1c4 {
    margin-bottom: 0;
  }
  ._16symg1c8 {
    margin-right: var(--_1giodv80);
  }
  ._16symg1cc {
    margin-right: var(--_1giodv81);
  }
  ._16symg1cg {
    margin-right: var(--_1giodv82);
  }
  ._16symg1ck {
    margin-right: var(--_1giodv83);
  }
  ._16symg1co {
    margin-right: var(--_1giodv84);
  }
  ._16symg1cs {
    margin-right: var(--_1giodv85);
  }
  ._16symg1cw {
    margin-right: var(--_1giodv86);
  }
  ._16symg1d0 {
    margin-right: var(--_1giodv87);
  }
  ._16symg1d4 {
    margin-right: 0;
  }
  ._16symg1d8 {
    margin-left: var(--_1giodv80);
  }
  ._16symg1dc {
    margin-left: var(--_1giodv81);
  }
  ._16symg1dg {
    margin-left: var(--_1giodv82);
  }
  ._16symg1dk {
    margin-left: var(--_1giodv83);
  }
  ._16symg1do {
    margin-left: var(--_1giodv84);
  }
  ._16symg1ds {
    margin-left: var(--_1giodv85);
  }
  ._16symg1dw {
    margin-left: var(--_1giodv86);
  }
  ._16symg1e0 {
    margin-left: var(--_1giodv87);
  }
  ._16symg1e4 {
    margin-left: 0;
  }
  ._16symg1e8 {
    align-items: flex-start;
  }
  ._16symg1ec {
    align-items: center;
  }
  ._16symg1eg {
    align-items: flex-end;
  }
  ._16symg1ek {
    justify-content: flex-start;
  }
  ._16symg1eo {
    justify-content: center;
  }
  ._16symg1es {
    justify-content: flex-end;
  }
  ._16symg1ew {
    justify-content: space-between;
  }
  ._16symg1f0 {
    flex-direction: row;
  }
  ._16symg1f4 {
    flex-direction: row-reverse;
  }
  ._16symg1f8 {
    flex-direction: column;
  }
  ._16symg1fc {
    flex-direction: column-reverse;
  }
  ._16symg1fg {
    flex-wrap: wrap;
  }
  ._16symg1fk {
    flex-wrap: nowrap;
  }
  ._16symg1fo {
    flex-shrink: 0;
  }
  ._16symg1fs {
    flex-grow: 0;
  }
  ._16symg1fw {
    flex-grow: 1;
  }
  ._16symg1g0 {
    text-align: left;
  }
  ._16symg1g4 {
    text-align: center;
  }
  ._16symg1g8 {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._16symg14t {
    display: none;
  }
  ._16symg14x {
    display: block;
  }
  ._16symg151 {
    display: inline;
  }
  ._16symg155 {
    display: inline-block;
  }
  ._16symg159 {
    display: flex;
  }
  ._16symg15d {
    position: relative;
  }
  ._16symg15h {
    position: absolute;
  }
  ._16symg15l {
    position: fixed;
  }
  ._16symg15p {
    border-radius: 0;
  }
  ._16symg15t {
    border-radius: 9999px;
  }
  ._16symg15x {
    border-radius: var(--_1giodv8a);
  }
  ._16symg161 {
    border-radius: var(--_1giodv8b);
  }
  ._16symg165 {
    border-radius: var(--_1giodv8c);
  }
  ._16symg169 {
    padding-top: var(--_1giodv80);
  }
  ._16symg16d {
    padding-top: var(--_1giodv81);
  }
  ._16symg16h {
    padding-top: var(--_1giodv82);
  }
  ._16symg16l {
    padding-top: var(--_1giodv83);
  }
  ._16symg16p {
    padding-top: var(--_1giodv84);
  }
  ._16symg16t {
    padding-top: var(--_1giodv85);
  }
  ._16symg16x {
    padding-top: var(--_1giodv86);
  }
  ._16symg171 {
    padding-top: var(--_1giodv87);
  }
  ._16symg175 {
    padding-top: 0;
  }
  ._16symg179 {
    padding-bottom: var(--_1giodv80);
  }
  ._16symg17d {
    padding-bottom: var(--_1giodv81);
  }
  ._16symg17h {
    padding-bottom: var(--_1giodv82);
  }
  ._16symg17l {
    padding-bottom: var(--_1giodv83);
  }
  ._16symg17p {
    padding-bottom: var(--_1giodv84);
  }
  ._16symg17t {
    padding-bottom: var(--_1giodv85);
  }
  ._16symg17x {
    padding-bottom: var(--_1giodv86);
  }
  ._16symg181 {
    padding-bottom: var(--_1giodv87);
  }
  ._16symg185 {
    padding-bottom: 0;
  }
  ._16symg189 {
    padding-right: var(--_1giodv80);
  }
  ._16symg18d {
    padding-right: var(--_1giodv81);
  }
  ._16symg18h {
    padding-right: var(--_1giodv82);
  }
  ._16symg18l {
    padding-right: var(--_1giodv83);
  }
  ._16symg18p {
    padding-right: var(--_1giodv84);
  }
  ._16symg18t {
    padding-right: var(--_1giodv85);
  }
  ._16symg18x {
    padding-right: var(--_1giodv86);
  }
  ._16symg191 {
    padding-right: var(--_1giodv87);
  }
  ._16symg195 {
    padding-right: 0;
  }
  ._16symg199 {
    padding-left: var(--_1giodv80);
  }
  ._16symg19d {
    padding-left: var(--_1giodv81);
  }
  ._16symg19h {
    padding-left: var(--_1giodv82);
  }
  ._16symg19l {
    padding-left: var(--_1giodv83);
  }
  ._16symg19p {
    padding-left: var(--_1giodv84);
  }
  ._16symg19t {
    padding-left: var(--_1giodv85);
  }
  ._16symg19x {
    padding-left: var(--_1giodv86);
  }
  ._16symg1a1 {
    padding-left: var(--_1giodv87);
  }
  ._16symg1a5 {
    padding-left: 0;
  }
  ._16symg1a9 {
    margin-top: var(--_1giodv80);
  }
  ._16symg1ad {
    margin-top: var(--_1giodv81);
  }
  ._16symg1ah {
    margin-top: var(--_1giodv82);
  }
  ._16symg1al {
    margin-top: var(--_1giodv83);
  }
  ._16symg1ap {
    margin-top: var(--_1giodv84);
  }
  ._16symg1at {
    margin-top: var(--_1giodv85);
  }
  ._16symg1ax {
    margin-top: var(--_1giodv86);
  }
  ._16symg1b1 {
    margin-top: var(--_1giodv87);
  }
  ._16symg1b5 {
    margin-top: 0;
  }
  ._16symg1b9 {
    margin-bottom: var(--_1giodv80);
  }
  ._16symg1bd {
    margin-bottom: var(--_1giodv81);
  }
  ._16symg1bh {
    margin-bottom: var(--_1giodv82);
  }
  ._16symg1bl {
    margin-bottom: var(--_1giodv83);
  }
  ._16symg1bp {
    margin-bottom: var(--_1giodv84);
  }
  ._16symg1bt {
    margin-bottom: var(--_1giodv85);
  }
  ._16symg1bx {
    margin-bottom: var(--_1giodv86);
  }
  ._16symg1c1 {
    margin-bottom: var(--_1giodv87);
  }
  ._16symg1c5 {
    margin-bottom: 0;
  }
  ._16symg1c9 {
    margin-right: var(--_1giodv80);
  }
  ._16symg1cd {
    margin-right: var(--_1giodv81);
  }
  ._16symg1ch {
    margin-right: var(--_1giodv82);
  }
  ._16symg1cl {
    margin-right: var(--_1giodv83);
  }
  ._16symg1cp {
    margin-right: var(--_1giodv84);
  }
  ._16symg1ct {
    margin-right: var(--_1giodv85);
  }
  ._16symg1cx {
    margin-right: var(--_1giodv86);
  }
  ._16symg1d1 {
    margin-right: var(--_1giodv87);
  }
  ._16symg1d5 {
    margin-right: 0;
  }
  ._16symg1d9 {
    margin-left: var(--_1giodv80);
  }
  ._16symg1dd {
    margin-left: var(--_1giodv81);
  }
  ._16symg1dh {
    margin-left: var(--_1giodv82);
  }
  ._16symg1dl {
    margin-left: var(--_1giodv83);
  }
  ._16symg1dp {
    margin-left: var(--_1giodv84);
  }
  ._16symg1dt {
    margin-left: var(--_1giodv85);
  }
  ._16symg1dx {
    margin-left: var(--_1giodv86);
  }
  ._16symg1e1 {
    margin-left: var(--_1giodv87);
  }
  ._16symg1e5 {
    margin-left: 0;
  }
  ._16symg1e9 {
    align-items: flex-start;
  }
  ._16symg1ed {
    align-items: center;
  }
  ._16symg1eh {
    align-items: flex-end;
  }
  ._16symg1el {
    justify-content: flex-start;
  }
  ._16symg1ep {
    justify-content: center;
  }
  ._16symg1et {
    justify-content: flex-end;
  }
  ._16symg1ex {
    justify-content: space-between;
  }
  ._16symg1f1 {
    flex-direction: row;
  }
  ._16symg1f5 {
    flex-direction: row-reverse;
  }
  ._16symg1f9 {
    flex-direction: column;
  }
  ._16symg1fd {
    flex-direction: column-reverse;
  }
  ._16symg1fh {
    flex-wrap: wrap;
  }
  ._16symg1fl {
    flex-wrap: nowrap;
  }
  ._16symg1fp {
    flex-shrink: 0;
  }
  ._16symg1ft {
    flex-grow: 0;
  }
  ._16symg1fx {
    flex-grow: 1;
  }
  ._16symg1g1 {
    text-align: left;
  }
  ._16symg1g5 {
    text-align: center;
  }
  ._16symg1g9 {
    text-align: right;
  }
}
.qb2t4f0 {
  --_1giodv80: 24px;
  --_1giodv81: 4px;
  --_1giodv82: 8px;
  --_1giodv83: 12px;
  --_1giodv84: 20px;
  --_1giodv85: 32px;
  --_1giodv86: 48px;
  --_1giodv87: 96px;
  --_1giodv88: 44px;
  --_1giodv89: 4px;
  --_1giodv8a: 4px;
  --_1giodv8b: 6px;
  --_1giodv8c: 10px;
  --_1giodv8d: #e60278;
  --_1giodv8e: #f8b1dc;
  --_1giodv8f: #fdc221;
  --_1giodv8g: #fee384;
  --_1giodv8h: #b91e1e;
  --_1giodv8i: #fb999a;
  --_1giodv8j: #838fa5;
  --_1giodv8k: rgba(159, 176, 245, 0.7);
  --_1giodv8l: #4964e9;
  --_1giodv8m: #9fb0f5;
  --_1giodv8n: #1d559d;
  --_1giodv8o: #98c9f1;
  --_1giodv8p: #2e3849;
  --_1giodv8r: #d2d7df;
  --_1giodv8q: #fff;
  --_1giodv8s: #12784f;
  --_1giodv8t: #8bdec5;
  --_1giodv8u: #512eaa;
  --_1giodv8v: #c6acf5;
  --_1giodv8w: 1px;
  --_1giodv8x: 2px;
  --_1giodv8y: 3px;
  --_1giodv8z: 400px;
  --_1giodv810: 660px;
  --_1giodv811: 940px;
  --_1giodv812: 1280px;
  --_1giodv813: #e60278;
  --_1giodv814: #f8b1dc;
  --_1giodv815: #723d02;
  --_1giodv816: #fee384;
  --_1giodv817: #b91e1e;
  --_1giodv818: #fb999a;
  --_1giodv819: #4964e9;
  --_1giodv81a: #9fb0f5;
  --_1giodv81b: #1d559d;
  --_1giodv81c: #98c9f1;
  --_1giodv81d: #4964e9;
  --_1giodv81f: #9fb0f5;
  --_1giodv81e: #4964e9;
  --_1giodv81g: #512eaa;
  --_1giodv81h: #c6acf5;
  --_1giodv81i: #2e3849;
  --_1giodv81j: #fff;
  --_1giodv81k: #12784f;
  --_1giodv81l: #8bdec5;
  --_1giodv81m: #512eaa;
  --_1giodv81n: #c6acf5;
  --_1giodv81o: #f57c00;
  --_1giodv81p: #5a6881;
  --_1giodv81q: hsla(0, 0%, 100%, 0.65);
  --_1giodv81r: #f7f8fb;
  --_1giodv81s: #0e131b;
  --_1giodv81t: #0d3880;
  --_1giodv81u: #e60278;
  --_1giodv81v: #cd026b;
  --_1giodv81w: #fd0585;
  --_1giodv81x: #feeffa;
  --_1giodv81y: #fdd7f3;
  --_1giodv81z: #fde3f6;
  --_1giodv820: #fdc221;
  --_1giodv821: #fef8de;
  --_1giodv822: #b91e1e;
  --_1giodv823: #a31a1a;
  --_1giodv824: #db1616;
  --_1giodv825: #ffe3e2;
  --_1giodv826: #fef3f3;
  --_1giodv827: #fcdbdb;
  --_1giodv828: #fde7e7;
  --_1giodv829: #4964e9;
  --_1giodv82a: #3251e6;
  --_1giodv82b: #5975ff;
  --_1giodv82c: #f4f6fe;
  --_1giodv82d: #dde3fc;
  --_1giodv82e: #e8ecfd;
  --_1giodv82f: #1d559d;
  --_1giodv82g: #e3f2fb;
  --_1giodv82h: #2e3849;
  --_1giodv82i: #242c39;
  --_1giodv82j: #384459;
  --_1giodv82k: #eaecf1;
  --_1giodv82l: #f7f8fb;
  --_1giodv82m: #e6e9f3;
  --_1giodv82n: #eff1f7;
  --_1giodv82o: #12784f;
  --_1giodv82p: #e2f7f1;
  --_1giodv82q: #512eaa;
  --_1giodv82r: #f1e8fd;
  --_1giodv82s: #fff;
  --_1giodv82t: #1c2330;
  --_1giodv82u: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --_1giodv82v: 1456;
  --_1giodv82w: 1900;
  --_1giodv82x: -500;
  --_1giodv82y: 0;
  --_1giodv82z: 2048;
  --_1giodv830: 12px;
  --_1giodv831: 20px;
  --_1giodv832: 8.5313px;
  --_1giodv833: -0.4642em;
  --_1giodv834: -0.4915em;
  --_1giodv835: 12px;
  --_1giodv836: 20px;
  --_1giodv837: 8.5313px;
  --_1giodv838: -0.4642em;
  --_1giodv839: -0.4915em;
  --_1giodv83a: 14px;
  --_1giodv83b: 20px;
  --_1giodv83c: 9.9531px;
  --_1giodv83d: -0.3451em;
  --_1giodv83e: -0.3725em;
  --_1giodv83f: 14px;
  --_1giodv83g: 20px;
  --_1giodv83h: 9.9531px;
  --_1giodv83i: -0.3451em;
  --_1giodv83j: -0.3725em;
  --_1giodv83k: 16px;
  --_1giodv83l: 24px;
  --_1giodv83m: 11.375px;
  --_1giodv83n: -0.3809em;
  --_1giodv83o: -0.4082em;
  --_1giodv83p: 16px;
  --_1giodv83q: 24px;
  --_1giodv83r: 11.375px;
  --_1giodv83s: -0.3809em;
  --_1giodv83t: -0.4082em;
  --_1giodv83u: 18px;
  --_1giodv83v: 28px;
  --_1giodv83w: 12.7969px;
  --_1giodv83x: -0.4086em;
  --_1giodv83y: -0.436em;
  --_1giodv83z: 18px;
  --_1giodv840: 28px;
  --_1giodv841: 12.7969px;
  --_1giodv842: -0.4086em;
  --_1giodv843: -0.436em;
  --_1giodv844: 400;
  --_1giodv845: 500;
  --_1giodv846: 700;
  --_1giodv847: 28px;
  --_1giodv848: 36px;
  --_1giodv849: 19.9063px;
  --_1giodv84a: -0.2737em;
  --_1giodv84b: -0.3011em;
  --_1giodv84c: 42px;
  --_1giodv84d: 44px;
  --_1giodv84e: 29.8594px;
  --_1giodv84f: -0.1547em;
  --_1giodv84g: -0.182em;
  --_1giodv84h: 21px;
  --_1giodv84i: 32px;
  --_1giodv84j: 14.9297px;
  --_1giodv84k: -0.3928em;
  --_1giodv84l: -0.4201em;
  --_1giodv84m: 28px;
  --_1giodv84n: 36px;
  --_1giodv84o: 19.9063px;
  --_1giodv84p: -0.2737em;
  --_1giodv84q: -0.3011em;
  --_1giodv84r: 21px;
  --_1giodv84s: 28px;
  --_1giodv84t: 14.9297px;
  --_1giodv84u: -0.2975em;
  --_1giodv84v: -0.3249em;
  --_1giodv84w: 21px;
  --_1giodv84x: 28px;
  --_1giodv84y: 14.9297px;
  --_1giodv84z: -0.2975em;
  --_1giodv850: -0.3249em;
  --_1giodv851: 18px;
  --_1giodv852: 28px;
  --_1giodv853: 12.7969px;
  --_1giodv854: -0.4086em;
  --_1giodv855: -0.436em;
  --_1giodv856: 18px;
  --_1giodv857: 28px;
  --_1giodv858: 12.7969px;
  --_1giodv859: -0.4086em;
  --_1giodv85a: -0.436em;
  --_1giodv85b: 400;
  --_1giodv85c: 500;
  --_1giodv85d: 24px;
  --_1giodv85e: 20px;
  --_1giodv85f: transform 0.125s ease, opacity 0.125s ease;
  --_1giodv85g: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1giodv85h: scale(0.95);
  --_1giodv85i: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1giodv85j: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1giodv85k: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._12o2juh0 {
  font-family: var(--_1giodv82u);
}
._12o2juh1 {
  font-weight: var(--_1giodv844);
}
._12o2juh2 {
  font-weight: var(--_1giodv845);
}
._12o2juh3 {
  font-weight: var(--_1giodv846);
}
._12o2juh4 {
  --_1d0g9qk0: var(--_1giodv830);
  --_1d0g9qk1: var(--_1giodv831);
  --_1d0g9qk2: var(--_1giodv833);
  --_1d0g9qk3: var(--_1giodv834);
}
._12o2juh7 {
  --_1d0g9qk0: var(--_1giodv83a);
  --_1d0g9qk1: var(--_1giodv83b);
  --_1d0g9qk2: var(--_1giodv83d);
  --_1d0g9qk3: var(--_1giodv83e);
}
._12o2juha {
  --_1d0g9qk0: var(--_1giodv83k);
  --_1d0g9qk1: var(--_1giodv83l);
  --_1d0g9qk2: var(--_1giodv83n);
  --_1d0g9qk3: var(--_1giodv83o);
}
._12o2juhd {
  --_1d0g9qk0: var(--_1giodv83u);
  --_1d0g9qk1: var(--_1giodv83v);
  --_1d0g9qk2: var(--_1giodv83x);
  --_1d0g9qk3: var(--_1giodv83y);
}
._12o2juhg {
  font-size: var(--_1giodv830);
  line-height: var(--_1giodv831);
}
._12o2juhh {
  font-size: var(--_1giodv83a);
  line-height: var(--_1giodv83b);
}
._12o2juhi {
  font-size: var(--_1giodv83k);
  line-height: var(--_1giodv83l);
}
._12o2juhj {
  font-size: var(--_1giodv83u);
  line-height: var(--_1giodv83v);
}
._12o2juhk {
  font-weight: var(--_1giodv85b);
}
._12o2juhl {
  font-weight: var(--_1giodv85c);
}
._12o2juhm {
  --_1d0g9qk0: var(--_1giodv847);
  --_1d0g9qk1: var(--_1giodv848);
  --_1d0g9qk2: var(--_1giodv84a);
  --_1d0g9qk3: var(--_1giodv84b);
}
._12o2juhp {
  --_1d0g9qk0: var(--_1giodv84h);
  --_1d0g9qk1: var(--_1giodv84i);
  --_1d0g9qk2: var(--_1giodv84k);
  --_1d0g9qk3: var(--_1giodv84l);
}
._12o2juhs {
  --_1d0g9qk0: var(--_1giodv84r);
  --_1d0g9qk1: var(--_1giodv84s);
  --_1d0g9qk2: var(--_1giodv84u);
  --_1d0g9qk3: var(--_1giodv84v);
}
._12o2juhv {
  --_1d0g9qk0: var(--_1giodv851);
  --_1d0g9qk1: var(--_1giodv852);
  --_1d0g9qk2: var(--_1giodv854);
  --_1d0g9qk3: var(--_1giodv855);
}
html:not(._16symg1z) ._12o2juh18 {
  --_12o2juhy: var(--_1giodv817);
  --_12o2juhz: var(--_1giodv815);
  --_12o2juh10: var(--_1giodv81b);
  --_12o2juh11: var(--_1giodv81m);
  --_12o2juh12: var(--_1giodv81k);
  --_12o2juh13: var(--_1giodv813);
  --_12o2juh14: var(--_1giodv819);
  --_12o2juh15: var(--_1giodv81i);
  --_12o2juh16: var(--_1giodv81p);
  --_12o2juh17: var(--_1giodv81d);
}
html:not(._16symg1z) ._12o2juh19 {
  --_12o2juhy: var(--_1giodv818);
  --_12o2juhz: var(--_1giodv816);
  --_12o2juh10: var(--_1giodv81c);
  --_12o2juh11: var(--_1giodv81n);
  --_12o2juh12: var(--_1giodv81l);
  --_12o2juh13: var(--_1giodv814);
  --_12o2juh14: var(--_1giodv81a);
  --_12o2juh15: var(--_1giodv81j);
  --_12o2juh16: var(--_1giodv81q);
  --_12o2juh17: var(--_1giodv81f);
}
html._16symg1z ._12o2juh1a {
  --_12o2juhy: var(--_1giodv817);
  --_12o2juhz: var(--_1giodv815);
  --_12o2juh10: var(--_1giodv81b);
  --_12o2juh11: var(--_1giodv81m);
  --_12o2juh12: var(--_1giodv81k);
  --_12o2juh13: var(--_1giodv813);
  --_12o2juh14: var(--_1giodv819);
  --_12o2juh15: var(--_1giodv81i);
  --_12o2juh16: var(--_1giodv81p);
  --_12o2juh17: var(--_1giodv81d);
}
html._16symg1z ._12o2juh1b {
  --_12o2juhy: var(--_1giodv818);
  --_12o2juhz: var(--_1giodv816);
  --_12o2juh10: var(--_1giodv81c);
  --_12o2juh11: var(--_1giodv81n);
  --_12o2juh12: var(--_1giodv81l);
  --_12o2juh13: var(--_1giodv814);
  --_12o2juh14: var(--_1giodv81a);
  --_12o2juh15: var(--_1giodv81j);
  --_12o2juh16: var(--_1giodv81q);
  --_12o2juh17: var(--_1giodv81f);
}
html:not(._16symg1z) ._12o2juh1c,
html:not(._16symg1z) ._12o2juh1d,
html:not(._16symg1z) ._12o2juh1e,
html:not(._16symg1z) ._12o2juh1f {
  --_12o2juh15: var(--_12o2juhy);
}
html:not(._16symg1z) ._12o2juh1g,
html:not(._16symg1z) ._12o2juh1h {
  --_12o2juh15: var(--_12o2juhz);
}
html:not(._16symg1z) ._12o2juh1i {
  --_12o2juh15: var(--_12o2juh12);
}
html:not(._16symg1z) ._12o2juh1j {
  --_12o2juh15: var(--_12o2juh10);
}
html:not(._16symg1z) ._12o2juh1k {
  --_12o2juh15: var(--_12o2juh11);
}
html._16symg1z ._12o2juh1l,
html._16symg1z ._12o2juh1m,
html._16symg1z ._12o2juh1n,
html._16symg1z ._12o2juh1o {
  --_12o2juh15: var(--_12o2juhy);
}
html._16symg1z ._12o2juh1p,
html._16symg1z ._12o2juh1q {
  --_12o2juh15: var(--_12o2juhz);
}
html._16symg1z ._12o2juh1r {
  --_12o2juh15: var(--_12o2juh12);
}
html._16symg1z ._12o2juh1s {
  --_12o2juh15: var(--_12o2juh10);
}
html._16symg1z ._12o2juh1t {
  --_12o2juh15: var(--_12o2juh11);
}
._12o2juh1u {
  color: var(--_12o2juhy);
}
._12o2juh1v {
  color: var(--_12o2juhz);
}
._12o2juh1w {
  color: var(--_12o2juh10);
}
._12o2juh1x {
  color: var(--_12o2juh11);
}
._12o2juh1y {
  color: var(--_12o2juh12);
}
._12o2juh1z {
  color: var(--_12o2juh13);
}
._12o2juh20 {
  color: var(--_12o2juh14);
}
._12o2juh21 {
  color: var(--_12o2juh15);
}
._12o2juh22 {
  color: var(--_12o2juh16);
}
._12o2juh23 {
  color: var(--_12o2juh17);
}
._12o2juh24 {
  padding-bottom: calc((var(--_1giodv88) - var(--_1giodv831)) / 2);
  padding-top: calc((var(--_1giodv88) - var(--_1giodv831)) / 2);
}
._12o2juh25 {
  padding-bottom: calc((var(--_1giodv88) - var(--_1giodv83b)) / 2);
  padding-top: calc((var(--_1giodv88) - var(--_1giodv83b)) / 2);
}
._12o2juh26 {
  padding-bottom: calc((var(--_1giodv88) - var(--_1giodv83l)) / 2);
  padding-top: calc((var(--_1giodv88) - var(--_1giodv83l)) / 2);
}
._12o2juh27 {
  padding-bottom: calc((var(--_1giodv88) - var(--_1giodv83v)) / 2);
  padding-top: calc((var(--_1giodv88) - var(--_1giodv83v)) / 2);
}
@media screen and (min-width: 740px) {
  ._12o2juh4 {
    --_1d0g9qk0: var(--_1giodv835);
    --_1d0g9qk1: var(--_1giodv836);
    --_1d0g9qk2: var(--_1giodv838);
    --_1d0g9qk3: var(--_1giodv839);
  }
  ._12o2juh7 {
    --_1d0g9qk0: var(--_1giodv83f);
    --_1d0g9qk1: var(--_1giodv83g);
    --_1d0g9qk2: var(--_1giodv83i);
    --_1d0g9qk3: var(--_1giodv83j);
  }
  ._12o2juha {
    --_1d0g9qk0: var(--_1giodv83p);
    --_1d0g9qk1: var(--_1giodv83q);
    --_1d0g9qk2: var(--_1giodv83s);
    --_1d0g9qk3: var(--_1giodv83t);
  }
  ._12o2juhd {
    --_1d0g9qk0: var(--_1giodv83z);
    --_1d0g9qk1: var(--_1giodv840);
    --_1d0g9qk2: var(--_1giodv842);
    --_1d0g9qk3: var(--_1giodv843);
  }
  ._12o2juhg {
    font-size: var(--_1giodv835);
    line-height: var(--_1giodv836);
  }
  ._12o2juhh {
    font-size: var(--_1giodv83f);
    line-height: var(--_1giodv83g);
  }
  ._12o2juhi {
    font-size: var(--_1giodv83p);
    line-height: var(--_1giodv83q);
  }
  ._12o2juhj {
    font-size: var(--_1giodv83z);
    line-height: var(--_1giodv840);
  }
  ._12o2juhm {
    --_1d0g9qk0: var(--_1giodv84c);
    --_1d0g9qk1: var(--_1giodv84d);
    --_1d0g9qk2: var(--_1giodv84f);
    --_1d0g9qk3: var(--_1giodv84g);
  }
  ._12o2juhp {
    --_1d0g9qk0: var(--_1giodv84m);
    --_1d0g9qk1: var(--_1giodv84n);
    --_1d0g9qk2: var(--_1giodv84p);
    --_1d0g9qk3: var(--_1giodv84q);
  }
  ._12o2juhs {
    --_1d0g9qk0: var(--_1giodv84w);
    --_1d0g9qk1: var(--_1giodv84x);
    --_1d0g9qk2: var(--_1giodv84z);
    --_1d0g9qk3: var(--_1giodv850);
  }
  ._12o2juhv {
    --_1d0g9qk0: var(--_1giodv856);
    --_1d0g9qk1: var(--_1giodv857);
    --_1d0g9qk2: var(--_1giodv859);
    --_1d0g9qk3: var(--_1giodv85a);
  }
  ._12o2juh24 {
    padding-bottom: calc((var(--_1giodv88) - var(--_1giodv836)) / 2);
    padding-top: calc((var(--_1giodv88) - var(--_1giodv836)) / 2);
  }
  ._12o2juh25 {
    padding-bottom: calc((var(--_1giodv88) - var(--_1giodv83g)) / 2);
    padding-top: calc((var(--_1giodv88) - var(--_1giodv83g)) / 2);
  }
  ._12o2juh26 {
    padding-bottom: calc((var(--_1giodv88) - var(--_1giodv83q)) / 2);
    padding-top: calc((var(--_1giodv88) - var(--_1giodv83q)) / 2);
  }
  ._12o2juh27 {
    padding-bottom: calc((var(--_1giodv88) - var(--_1giodv840)) / 2);
    padding-top: calc((var(--_1giodv88) - var(--_1giodv840)) / 2);
  }
}
.mt5w836 {
  background: var(--mt5w830);
}
.mt5w837 {
  background: var(--mt5w831);
}
.mt5w838 {
  background: var(--mt5w832);
}
.mt5w839 {
  background: var(--mt5w833);
}
.mt5w83a {
  background: var(--mt5w834);
}
.mt5w83b {
  background: var(--mt5w835);
}
html:not(._16symg1z) .mt5w83c {
  --mt5w830: var(--_1giodv8u);
  --mt5w831: var(--_1giodv8n);
  --mt5w832: var(--_1giodv8s);
  --mt5w833: var(--_1giodv8f);
  --mt5w834: var(--_1giodv8h);
  --mt5w835: var(--_1giodv8l);
}
html:not(._16symg1z) .mt5w83d {
  --mt5w830: var(--_1giodv8v);
  --mt5w831: var(--_1giodv8o);
  --mt5w832: var(--_1giodv8t);
  --mt5w833: var(--_1giodv8g);
  --mt5w834: var(--_1giodv8i);
  --mt5w835: var(--_1giodv8m);
}
html._16symg1z .mt5w83e {
  --mt5w830: var(--_1giodv8u);
  --mt5w831: var(--_1giodv8n);
  --mt5w832: var(--_1giodv8s);
  --mt5w833: var(--_1giodv8f);
  --mt5w834: var(--_1giodv8h);
  --mt5w835: var(--_1giodv8l);
}
html._16symg1z .mt5w83f {
  --mt5w830: var(--_1giodv8v);
  --mt5w831: var(--_1giodv8o);
  --mt5w832: var(--_1giodv8t);
  --mt5w833: var(--_1giodv8g);
  --mt5w834: var(--_1giodv8i);
  --mt5w835: var(--_1giodv8m);
}
.mt5w83g {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.mt5w83h {
  width: var(--_1giodv8c);
}
._183van81 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /*
object-assign
(c) Sindre Sorhus
@license MIT
*/

/** @license React v0.20.2
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/** @license React v17.0.2
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <script defer
            src="scripts[0]"
    >
    </script>
    <link href="styles[0]"
          rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__16symg1z,html.sprinkles_darkMode__16symg1z body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_default__qb2t4f0 typography_lightModeTone_light__12o2juh18 typography_darkModeTone_dark__12o2juh1b">
+        <div class="reset_base__uu5tf40 sprinkles_paddingBottom_gutter_mobile__16symg176 sprinkles_paddingTop_gutter_mobile__16symg166 sprinkles_paddingLeft_gutter_mobile__16symg196 sprinkles_paddingRight_gutter_mobile__16symg186 sprinkles_position_relative_mobile__16symg15a typography_lightModeTone_light__12o2juh18 typography_darkModeTone_dark__12o2juh1b sprinkles_background_surface_lightMode__16symg132 sprinkles_background_surfaceDark_darkMode__16symg135">
+          <span class="reset_base__uu5tf40 sprinkles_display_block_mobile__16symg14u typography_fontFamily__12o2juh0 typography_fontWeight_regular__12o2juh1 typography_tone_neutral__12o2juh21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__12o2juhd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
